[package]
name = "playground-warp"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/playground-warp"
documentation = "https://docs.rs/playground-warp"
description = "Trying out the Rust warp framework"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
structopt = "0.2.10"
warp = "0.1.0"
exitfailure = "0.5.0"

[dev-dependencies]

[build-dependencies]
structopt = "0.2.10"
